--- a/Biblioteca/BibliotecaDatos/BibliotecaDatos.csproj
+++ b/Biblioteca/BibliotecaDatos/BibliotecaDatos.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3316D274-BA7B-4952-A752-CDD921D32975}</ProjectGuid>
+    <ProjectGuid>{B0E9F2D1-CD8C-4635-BE59-3B0C165E7D7C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BibliotecaEntidades</RootNamespace>
-    <AssemblyName>BibliotecaEntidades</AssemblyName>
+    <RootNamespace>BibliotecaDatos</RootNamespace>
+    <AssemblyName>BibliotecaDatos</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -31,9 +31,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -42,16 +45,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entidades\Cliente.cs" />
-    <Compile Include="Entidades\Ejemplar.cs" />
-    <Compile Include="Entidades\Libro.cs" />
-    <Compile Include="Entidades\Persona.cs" />
-    <Compile Include="Entidades\Prestamo.cs" />
-    <Compile Include="Modelos\TransactionResult.cs" />
+    <Compile Include="PrestamoMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WebHelper.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Excepciones\" />
+    <ProjectReference Include="..\BibliotecaEntidades\BibliotecaEntidades.csproj">
+      <Project>{3316d274-ba7b-4952-a752-cdd921d32975}</Project>
+      <Name>BibliotecaEntidades</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
