--- a/Biblioteca/BibliotecaDatos/BibliotecaDatos.csproj
+++ b/Biblioteca/BibliotecaDatos/BibliotecaDatos.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClienteMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebHelper.cs" />
   </ItemGroup>
