--- a/Biblioteca/BibliotecaNegocio/BibliotecaNegocio.csproj
+++ b/Biblioteca/BibliotecaNegocio/BibliotecaNegocio.csproj
@@ -42,6 +42,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClienteServicio.cs" />
+    <Compile Include="EjemplarServicio.cs" />
+    <Compile Include="LibroServicio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
