--- a/Biblioteca/BibliotecaDatos/BibliotecaDatos.csproj
+++ b/Biblioteca/BibliotecaDatos/BibliotecaDatos.csproj
@@ -46,6 +46,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClienteMapper.cs" />
+    <Compile Include="EjemplarMapper.cs" />
+    <Compile Include="LibroMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebHelper.cs" />
   </ItemGroup>
