--- a/Biblioteca/BibliotecaUI/BibliotecaUI.csproj
+++ b/Biblioteca/BibliotecaUI/BibliotecaUI.csproj
@@ -52,6 +52,12 @@
     <Compile Include="FrmAltaLibro.Designer.cs">
       <DependentUpon>FrmAltaLibro.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmListarLibros.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmListarLibros.Designer.cs">
+      <DependentUpon>FrmListarLibros.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmPrincipal.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -68,6 +74,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FrmAltaLibro.resx">
       <DependentUpon>FrmAltaLibro.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmListarLibros.resx">
+      <DependentUpon>FrmListarLibros.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmPrincipal.resx">
       <DependentUpon>FrmPrincipal.cs</DependentUpon>
