--- a/Biblioteca/BibliotecaNegocio/BibliotecaNegocio.csproj
+++ b/Biblioteca/BibliotecaNegocio/BibliotecaNegocio.csproj
@@ -44,6 +44,7 @@
     <Compile Include="ClienteServicio.cs" />
     <Compile Include="EjemplarServicio.cs" />
     <Compile Include="LibroServicio.cs" />
+    <Compile Include="PrestamoServicio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
