--- a/Biblioteca/BibliotecaDatos/BibliotecaDatos.csproj
+++ b/Biblioteca/BibliotecaDatos/BibliotecaDatos.csproj
@@ -48,6 +48,7 @@
     <Compile Include="ClienteMapper.cs" />
     <Compile Include="EjemplarMapper.cs" />
     <Compile Include="LibroMapper.cs" />
+    <Compile Include="PrestamoMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebHelper.cs" />
   </ItemGroup>
